--- a/MenuCLI/MenuCLI.csproj
+++ b/MenuCLI/MenuCLI.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <Version>0.5.0-alpha</Version>
+    <Version>1.0.0</Version>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <Description>A library for efficient App Console Interface</Description>
